--- a/us-medical-insurance-costs.ipynb
+++ b/us-medical-insurance-costs.ipynb
@@ -44,6 +44,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -55,12 +62,12 @@
    "metadata": {},
    "source": [
     "#### Import a dataset into your program\n",
-    "1. check whether are headers available"
+    "1. check whether headers are available"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -91,15 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first rows of source data:\n",
-      "[{'age': '19', 'sex': 'female', 'bmi': '27.9', 'children': '0', 'smoker': 'yes', 'region': 'southwest', 'charges': '16884.924'}]\n",
+      "first rows of source data:  [{'age': '19', 'sex': 'female', 'bmi': '27.9', 'children': '0', 'smoker': 'yes', 'region': 'southwest', 'charges': '16884.924'}]\n",
       "Total of 0 instances is missing in the source data\n"
      ]
     }
@@ -107,12 +113,10 @@
    "source": [
     "with open('insurance.csv',mode='r',newline='') as insurance_csv:\n",
     "  reader = csv.DictReader(insurance_csv, restval=None)\n",
-    "\n",
     "  insurance_data = []\n",
     "  for row in reader:\n",
     "    insurance_data.append(row)\n",
-    "  print('first rows of source data:')\n",
-    "  print(insurance_data[:1])\n",
+    "  print('first rows of source data: ', insurance_data[:1])\n",
     "\n",
     "# test = [{'height':20},{None:True},{'age':None}]\n",
     "count_missing_data = 0\n",
@@ -120,7 +124,7 @@
     "  if None in dict.values():\n",
     "      count_missing_data += 1\n",
     "\n",
-    "print('Total of {} instances is missing in the source data'.format(count_missing_data))"
+    "print('Total of {} instances is missing in the source data'.format(count_missing_data))\n"
    ]
   },
   {
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +198,7 @@
     "\n",
     "        datum[key] = out_value\n",
     "\n",
-    "change_type(insurance_data, 'age', float)\n",
+    "change_type(insurance_data, 'age', float) # str() didn't work; I don't know why\n",
     "change_type(insurance_data, 'bmi', float)\n",
     "change_type(insurance_data, 'charges', float)\n",
     "\n",
@@ -217,23 +221,39 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Minimum\n",
+    "* Maximum"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The maximum value for the bmi is 53.13 in the datum [{'age': 18.0, 'sex': 0, 'bmi': 53.13, 'children': '0', 'smoker': 0, 'region': 'southeast', 'charges': 1163.4627}]\n",
-      "The maximum value for the age is 64.0 in the datum [{'age': 64.0, 'sex': 0, 'bmi': 24.7, 'children': '1', 'smoker': 0, 'region': 'northwest', 'charges': 30166.61817}, {'age': 64.0, 'sex': 1, 'bmi': 31.3, 'children': '2', 'smoker': 1, 'region': 'southwest', 'charges': 47291.055}, {'age': 64.0, 'sex': 1, 'bmi': 39.33, 'children': '0', 'smoker': 0, 'region': 'northeast', 'charges': 14901.5167}, {'age': 64.0, 'sex': 1, 'bmi': 33.8, 'children': '1', 'smoker': 1, 'region': 'southwest', 'charges': 47928.03}, {'age': 64.0, 'sex': 0, 'bmi': 34.5, 'children': '0', 'smoker': 0, 'region': 'southwest', 'charges': 13822.803}, {'age': 64.0, 'sex': 1, 'bmi': 30.115, 'children': '3', 'smoker': 0, 'region': 'northwest', 'charges': 16455.70785}, {'age': 64.0, 'sex': 0, 'bmi': 25.6, 'children': '2', 'smoker': 0, 'region': 'southwest', 'charges': 14988.432}, {'age': 64.0, 'sex': 1, 'bmi': 32.965, 'children': '0', 'smoker': 0, 'region': 'northwest', 'charges': 14692.66935}, {'age': 64.0, 'sex': 0, 'bmi': 39.16, 'children': '1', 'smoker': 0, 'region': 'southeast', 'charges': 14418.2804}, {'age': 64.0, 'sex': 0, 'bmi': 33.88, 'children': '0', 'smoker': 1, 'region': 'southeast', 'charges': 46889.2612}, {'age': 64.0, 'sex': 0, 'bmi': 40.48, 'children': '0', 'smoker': 0, 'region': 'southeast', 'charges': 13831.1152}, {'age': 64.0, 'sex': 1, 'bmi': 39.05, 'children': '3', 'smoker': 0, 'region': 'southeast', 'charges': 16085.1275}, {'age': 64.0, 'sex': 0, 'bmi': 38.19, 'children': '0', 'smoker': 0, 'region': 'northeast', 'charges': 14410.9321}, {'age': 64.0, 'sex': 1, 'bmi': 22.99, 'children': '0', 'smoker': 1, 'region': 'southeast', 'charges': 27037.9141}, {'age': 64.0, 'sex': 0, 'bmi': 37.905, 'children': '0', 'smoker': 0, 'region': 'northwest', 'charges': 14210.53595}, {'age': 64.0, 'sex': 1, 'bmi': 39.7, 'children': '0', 'smoker': 0, 'region': 'southwest', 'charges': 14319.031}, {'age': 64.0, 'sex': 1, 'bmi': 35.97, 'children': '0', 'smoker': 0, 'region': 'southeast', 'charges': 14313.8463}, {'age': 64.0, 'sex': 1, 'bmi': 31.825, 'children': '2', 'smoker': 0, 'region': 'northeast', 'charges': 16069.08475}, {'age': 64.0, 'sex': 1, 'bmi': 26.885, 'children': '0', 'smoker': 1, 'region': 'northwest', 'charges': 29330.98315}, {'age': 64.0, 'sex': 0, 'bmi': 26.41, 'children': '0', 'smoker': 0, 'region': 'northeast', 'charges': 14394.5579}, {'age': 64.0, 'sex': 0, 'bmi': 36.96, 'children': '2', 'smoker': 1, 'region': 'southeast', 'charges': 49577.6624}, {'age': 64.0, 'sex': 0, 'bmi': 23.76, 'children': '0', 'smoker': 1, 'region': 'southeast', 'charges': 26926.5144}]\n",
-      "The minimum value for the bmi is 15.96 for exampel in the datum {'age': 18.0, 'sex': 0, 'bmi': 15.96, 'children': '0', 'smoker': 0, 'region': 'northeast', 'charges': 1694.7964}\n",
-      "The minimum value for the age is 18.0 for exampel in the datum {'age': 18.0, 'sex': 0, 'bmi': 33.77, 'children': '1', 'smoker': 0, 'region': 'southeast', 'charges': 1725.5523}\n"
+      "The minimum value for the bmi is 15.96 for example in the datum {'age': 18.0, 'sex': 0, 'bmi': 15.96, 'children': '0', 'smoker': 0, 'region': 'northeast', 'charges': 1694.7964}\n",
+      "15.96\n",
+      "The maximum value for the bmi is 53.13 for example in the datum {'age': 18.0, 'sex': 0, 'bmi': 53.13, 'children': '0', 'smoker': 0, 'region': 'southeast', 'charges': 1163.4627}\n",
+      "53.13\n"
      ]
     }
    ],
    "source": [
-    "def find_max_list(data:list,category:str) -> list:\n",
+    "def find_max_single_datum(data:list,category:str) -> dict:\n",
+    "    max_datum = max(data, key = lambda datum: datum[category])\n",
+    "    max_value = max_datum[category]\n",
+    "    # min_value = min(iterable = data, key = lambda datum: datum[category])\n",
+    "    print('The maximum value for the {category} is {max_value} for example in the datum {max_datum}'.format(category = category, max_value = max_value, max_datum = max_datum))\n",
+    "    return max_value\n",
+    "\n",
+    "def find_max_list_datum(data:list,category:str) -> list:\n",
     "    max_value = 0\n",
     "    max_datum = []\n",
     "    for datum in data:\n",
@@ -243,30 +263,152 @@
     "            max_value = value\n",
     "        elif value == max_value:\n",
     "            max_datum.append(datum)\n",
-    "\n",
-    "\n",
     "    print('The maximum value for the {category} is {max_value} in the datum {max_datum}'.format(category = category, max_value = max_value, max_datum = max_datum))\n",
-    "    return max_datum\n",
+    "    return max_value\n",
     "\n",
-    "\n",
-    "find_max_list(data = insurance_data, category = 'bmi')\n",
-    "find_max_list(data = insurance_data, category = 'age')\n",
+    "# find_max_list_datum(data = insurance_data, category = 'age')\n",
     "\n",
     "def find_min_single(data:list,category:str) -> dict:\n",
     "    min_datum = min(data, key = lambda datum: datum[category])\n",
     "    min_value = min_datum[category]\n",
     "    # min_value = min(iterable = data, key = lambda datum: datum[category])\n",
-    "    \n",
-    "    print('The minimum value for the {category} is {min_value} for exampel in the datum {min_datum}'.format(category = category, min_value = min_value, min_datum = min_datum))\n",
+    "    print('The minimum value for the {category} is {min_value} for example in the datum {min_datum}'.format(category = category, min_value = min_value, min_datum = min_datum))\n",
+    "    return min_value\n",
     "\n",
-    "find_min_single(data = insurance_data, category = 'bmi')\n",
-    "find_min_single(data = insurance_data, category = 'age')\n",
+    "print(find_min_single(data = insurance_data, category = 'bmi'))\n",
+    "print(find_max_single_datum(data = insurance_data, category = 'bmi'))\n",
+    "\n",
     "\n"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Distinct values\n",
+    "* Count of distinct values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 6 distinct values in children category (sorted): ['0', '1', '2', '3', '4', '5']\n",
+      "['0', '1', '2', '3', '4', '5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def distinct_values_sorted(data:list, category:str) -> list:\n",
+    "    distinct_values = set()\n",
+    "    for datum in data:\n",
+    "        distinct_values.add(datum[category])\n",
+    "    count_distinct = len(distinct_values)\n",
+    "    distinct_values = sorted(distinct_values)\n",
+    "    print('There are {count_distinct} distinct values in {category} category (sorted): {distinct_values}'.format(count_distinct=count_distinct,category=category,distinct_values=distinct_values))\n",
+    "    # # if output == 'count':\n",
+    "    # #     return count_distinct\n",
+    "    # elif output == 'values':\n",
+    "    return distinct_values\n",
+    "\n",
+    "print(distinct_values_sorted(insurance_data, 'children'))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Avarage\n",
+    "* Median\n",
+    "* Quartiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category bmi has average of 30.7\n",
+      "The 0.25 percentile of the bmi category is 26.3\n",
+      "The 0.5 percentile of the bmi category is 30.4\n",
+      "The 0.75 percentile of the bmi category is 34.7\n",
+      "The 0 percentile of the bmi category is 16.0\n",
+      "The 1 percentile of the bmi category is 53.1\n",
+      "The maximum value for the bmi is 53.13 for example in the datum {'age': 18.0, 'sex': 0, 'bmi': 53.13, 'children': '0', 'smoker': 0, 'region': 'southeast', 'charges': 1163.4627}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "53.13"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#TODO decorator fot the category selection\n",
+    "\n",
+    "def average(data:list, category:str):\n",
+    "    category_values = [datum[category] for datum in data]\n",
+    "    category_sum = sum(category_values)\n",
+    "    average = category_sum / len(category_values)\n",
+    "    print('Category {category} has average of {average:.1f}'.format(category=category, average=average))\n",
+    "    return average\n",
+    "\n",
+    "average(insurance_data, 'bmi')\n",
+    "\n",
+    "def percentile(data:list, category:str, percentile:float):\n",
+    "    category_values = [datum[category] for datum in data]\n",
+    "    sorted_values = sorted(category_values)\n",
+    "    percentile_index = (len(data)-1) * percentile \n",
+    "    percentile_value = sorted_values[round(percentile_index)]\n",
+    "    print('The {percentile} percentile of the {category} category is {percentile_value:.1f}'.format(percentile=percentile, category=category, percentile_value=percentile_value))\n",
+    "    \n",
+    "    return percentile_value # approximation by rounding the index value\n",
+    "\n",
+    "percentile(insurance_data, 'bmi', 0.25)\n",
+    "\n",
+    "def median(data:list, category:str):\n",
+    "    return percentile(data, category, percentile=0.5)\n",
+    "\n",
+    "median(insurance_data, 'bmi')\n",
+    "\n",
+    "def first_quartile(data:list, category:str):\n",
+    "    return percentile(data, category, percentile=0.25)\n",
+    "\n",
+    "def third_quartile(data:list, category:str):\n",
+    "    return percentile(data, category, percentile=0.75)\n",
+    "\n",
+    "third_quartile(insurance_data, 'bmi')\n",
+    "\n",
+    "def minimum(data:list, category:str):\n",
+    "    return percentile(data, category, percentile=0)\n",
+    "\n",
+    "def maximum(data:list, category:str):\n",
+    "    return percentile(data, category, percentile=1)\n",
+    "\n",
+    "minimum(insurance_data, 'bmi')\n",
+    "maximum(insurance_data, 'bmi')\n",
+    "find_max_single_datum(insurance_data, 'bmi')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,10 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TODO correlation coeffiecients, ANOVA ... model\n",
+    "\n",
+    "#TODO ouliers testing, robust estimators...Box plot!"
+   ]
   }
  ],
  "metadata": {
